package com.sbnz.legal.domain.enums;

public enum AuditRecordType {
    RULE_FIRED,
    STATUS_CHANGED,
    TASK_CREATED,
    CASE_UPDATED,
    CASE_DELETED
}
