package com.sbnz.legal.domain.enums;

public enum CaseType {
    DEBT_COLLECTION,
    DAMAGES,
    PROPERTY,
    UNKNOWN
}
