package com.sbnz.legal.domain.enums;

public enum CepAlertType {
    DOCUMENT_NOT_ADDED,
    CASE_INACTIVE,
    READY_NOT_REVIEWED
}
