package com.sbnz.legal.domain.enums;

public enum DateType {
    OBLIGATION_DATE,
    DUE_DATE,
    DAMAGE_DATE,
    DECISION_RECEIVED_DATE,
    LAST_ACTION_DATE,
    OPENED_DATE
}
