package com.sbnz.legal.domain.enums;

public enum DocumentType {
    CONTRACT,
    INVOICE,
    SERVICE_PROOF,
    PRE_LAWSUIT_NOTICE,
    DAMAGE_PROOF,
    DAMAGE_REPORT,
    CADASTRE_EXTRACT,
    OWNERSHIP_DOCUMENT,
    ID_CARD,
    REGISTRATION_EXTRACT,
    COMPANY_REGISTRATION_DATA,
    PERSONAL_DATA,
    AUTHORIZATION_OR_DECISION,
    OTHER
}
