package com.sbnz.legal.domain.enums;

public enum DocumentationStatus {
    COMPLETE,
    PARTIAL,
    INCOMPLETE
}
