package com.sbnz.legal.domain.enums;

public enum MissingDataField {
    CASE_NAME,
    OPPOSING_PARTY,
    CASE_DESCRIPTION,
    CONTACT
}
