package com.sbnz.legal.domain.enums;

public enum PartyType {
    NATURAL_PERSON,
    LEGAL_ENTITY,
    PUBLIC_ENTITY,
    ANY
}
