package com.sbnz.legal.domain.enums;

public enum ProcessingStatus {
    INCOMPLETE,
    WAITING_FOR_CLIENT,
    NEEDS_ATTENTION,
    NEEDS_DATE_CHECK,
    READY_FOR_REVIEW,
    ARCHIVED
}
