package com.sbnz.legal.domain.enums;

public enum TaskType {
    REQUEST_CONTRACT,
    REQUEST_INVOICE,
    REQUEST_SERVICE_PROOF,
    CHECK_IF_NOTICE_EXISTS,
    CHECK_IF_DAMAGE_REPORT_EXISTS,
    REQUEST_DAMAGE_PROOF,
    REQUEST_CADASTRE_EXTRACT,
    REQUEST_OWNERSHIP_DOCUMENT,
    CHECK_AUTHORIZATION_DOCUMENT,
    VERIFY_DUE_DATE,
    VERIFY_DAMAGE_DATE,
    VERIFY_DATE_RELEVANCE,
    ASSIGN_REVIEW,
    MANUAL_CASE_TYPE_REVIEW,
    CHECK_CASE_STATUS,
    CHECK_DOCUMENT_REQUEST_STATUS,
    CHECK_COMPANY_DATA,
    CHECK_PERSONAL_DATA
}
