@startuml
skinparam backgroundColor #FFFFFF
skinparam pageBackgroundColor #FFFFFF
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam shadowing false
skinparam nodesep 25
skinparam ranksep 35
top to bottom direction

title SBNZ — domain model

' ═══════════════════════════════════════════════════════════════════
' ROW 1 — Core aggregate
' ═══════════════════════════════════════════════════════════════════

package "Core aggregate" as pkg_core #F7F7F7 {

  class Party {
    +caseId: String
    +role: PartyRole
    +partyType: PartyType
    +name: String
    +contact: String
  }

  class LegalCase {
    +caseId: String
    +name: String
    +description: String
    +assignedUser: String
    +openedAt: Instant
    +lastUpdatedAt: Instant
    +archived: boolean
    +initialCaseType: CaseType
  }

  class Document {
    +caseId: String
    +documentType: DocumentType
    +present: boolean
  }

  class DateFact {
    +caseId: String
    +dateType: DateType
    +value: LocalDate
  }

  class CaseIndicator {
    +caseId: String
    +hasDebtOrClaim: boolean
    +hasDamage: boolean
    +hasContract: boolean
    +hasInvoice: boolean
    +hasRealEstate: boolean
    +hasCadastreData: boolean
    +hasOfficialAct: boolean
    +claimAmount: BigDecimal
  }

  Party -[hidden]right- LegalCase
  LegalCase -[hidden]right- Document
  Document -[hidden]right- DateFact
  DateFact -[hidden]right- CaseIndicator

  LegalCase "1" *-- "0..*" Party
  LegalCase "1" *-- "0..*" Document
  LegalCase "1" *-- "0..*" DateFact
  LegalCase "1" o-- "0..1" CaseIndicator
}

' ═══════════════════════════════════════════════════════════════════
' ROW 2 — Derived facts (3 equal columns)
' ═══════════════════════════════════════════════════════════════════

package "Derived facts (via caseId)" as pkg_derived #EEEEEE {

  package "Validation & classification" as col_val #F7F7F7 {
    class CaseClassification {
      +caseId: String
      +caseType: CaseType
      +confidence: ClassificationConfidence
    }
    class MissingRequiredData {
      +caseId: String
      +field: MissingDataField
    }
    class BasicDataStatus {
      +caseId: String
      +status: BasicDataCompleteness
    }
  }

  package "Documents & dates" as col_doc #F7F7F7 {
    class MissingRequiredDocument {
      +caseId: String
      +documentType: DocumentType
    }
    class MissingExpectedDocument {
      +caseId: String
      +documentType: DocumentType
    }
    class DocumentationChecklistStatus {
      +caseId: String
      +status: DocumentationStatus
    }
    class ImportantDateNeedsCheck {
      +caseId: String
      +dateType: DateType
    }
  }

  package "Status & tasks" as col_status #F7F7F7 {
    class SuggestedTask {
      +caseId: String
      +taskType: TaskType
      +open: boolean
      +createdAt: Instant
    }
    class CaseStatusCandidate {
      +caseId: String
      +status: ProcessingStatus
      +priority: int
    }
    class CaseStatus {
      +caseId: String
      +status: ProcessingStatus
    }
    class MainActionAssessment {
      +caseId: String
      +goal: ProcedureStep
      +blocked: boolean
    }
  }

  col_status -[hidden]right- col_doc
  col_doc -[hidden]right- col_val
}

' ═══════════════════════════════════════════════════════════════════
' ROW 3 — CEP & audit (horizontal)
' ═══════════════════════════════════════════════════════════════════

package "CEP & audit" as pkg_cep #F7F7F7 {

  interface CaseEvent {
    +getCaseId(): String
    +getTs(): long
  }

  class TaskCreatedEvent <<event>> {
    +caseId: String
    +taskType: TaskType
    +documentType: DocumentType
    +ts: long
  }

  class DocumentAddedEvent <<event>> {
    +caseId: String
    +documentType: DocumentType
    +ts: long
  }

  class CaseUpdatedEvent <<event>> {
    +caseId: String
    +ts: long
  }

  class CepAlert {
    +caseId: String
    +alertType: CepAlertType
    +raisedAt: Instant
  }

  class CaseInactive {
    +caseId: String
    +daysSinceActivity: int
  }

  class AuditRecord {
    +id: UUID
    +caseId: String
    +recordType: AuditRecordType
    +ruleName: String
    +firedAt: Instant
    +explanation: String
    +previousStatus: ProcessingStatus
    +newStatus: ProcessingStatus
    +taskType: TaskType
  }

  CaseEvent <|.. TaskCreatedEvent
  CaseEvent <|.. DocumentAddedEvent
  CaseEvent <|.. CaseUpdatedEvent

  CaseEvent -[hidden]right- TaskCreatedEvent
  TaskCreatedEvent -[hidden]right- DocumentAddedEvent
  DocumentAddedEvent -[hidden]right- CaseUpdatedEvent
  CaseUpdatedEvent -[hidden]right- CepAlert
  CepAlert -[hidden]right- CaseInactive
  CaseInactive -[hidden]right- AuditRecord
}

' ═══════════════════════════════════════════════════════════════════
' ROW 4 — Static knowledge + office
' ═══════════════════════════════════════════════════════════════════

package "Procedure graph (static)" as pkg_procedure #F7F7F7 {

  class ProcedureGoal <<static>> {
    +caseType: CaseType
    +step: ProcedureStep
  }

  class StepRequiresStep <<static>> {
    +step: ProcedureStep
    +requiresStep: ProcedureStep
  }

  class StepRequiresDocument <<static>> {
    +step: ProcedureStep
    +documentType: DocumentType
  }

  ProcedureGoal -[hidden]right- StepRequiresStep
  StepRequiresStep -[hidden]right- StepRequiresDocument
}

package "Office-wide facts" as pkg_office #F7F7F7 {

  class OfficeCaseStatus {
    +caseId: String
    +status: ProcessingStatus
  }

  class OfficeLoadWarning {
    +type: OfficeLoadWarningType
    +caseCount: int
  }

  OfficeCaseStatus -[hidden]right- OfficeLoadWarning
  OfficeLoadWarning ..> OfficeCaseStatus : accumulate
}

pkg_procedure -[hidden]right- pkg_office

' ═══════════════════════════════════════════════════════════════════
' ROW 5 — Enumerations
' ═══════════════════════════════════════════════════════════════════

package "Enumerations" as pkg_enums #F7F7F7 {

  package "Case & parties" as enums_case {
    enum CaseType {
      DEBT_COLLECTION
      DAMAGES
      PROPERTY
      UNKNOWN
    }
    enum PartyType {
      NATURAL_PERSON
      LEGAL_ENTITY
      PUBLIC_ENTITY
      ANY
    }
    enum PartyRole {
      CLIENT
      OPPOSING
    }
  }

  package "Documents & dates" as enums_doc {
    enum DocumentType {
      CONTRACT
      INVOICE
      SERVICE_PROOF
      PRE_LAWSUIT_NOTICE
      DAMAGE_PROOF
      DAMAGE_REPORT
      CADASTRE_EXTRACT
      OWNERSHIP_DOCUMENT
      ID_CARD
      REGISTRATION_EXTRACT
      COMPANY_REGISTRATION_DATA
      PERSONAL_DATA
      AUTHORIZATION_OR_DECISION
      OTHER
    }
    enum DateType {
      OBLIGATION_DATE
      DUE_DATE
      DAMAGE_DATE
      DECISION_RECEIVED_DATE
      LAST_ACTION_DATE
      OPENED_DATE
    }
  }

  package "Tasks & status" as enums_task {
    enum TaskType {
      REQUEST_CONTRACT
      REQUEST_INVOICE
      REQUEST_SERVICE_PROOF
      CHECK_IF_NOTICE_EXISTS
      CHECK_IF_DAMAGE_REPORT_EXISTS
      REQUEST_DAMAGE_PROOF
      REQUEST_CADASTRE_EXTRACT
      REQUEST_OWNERSHIP_DOCUMENT
      CHECK_AUTHORIZATION_DOCUMENT
      VERIFY_DUE_DATE
      VERIFY_DAMAGE_DATE
      VERIFY_DATE_RELEVANCE
      ASSIGN_REVIEW
      MANUAL_CASE_TYPE_REVIEW
      CHECK_CASE_STATUS
      CHECK_DOCUMENT_REQUEST_STATUS
      CHECK_COMPANY_DATA
      CHECK_PERSONAL_DATA
    }
    enum ProcessingStatus {
      INCOMPLETE
      WAITING_FOR_CLIENT
      NEEDS_ATTENTION
      NEEDS_DATE_CHECK
      READY_FOR_REVIEW
      ARCHIVED
    }
  }

  package "Validation" as enums_val {
    enum MissingDataField {
      CASE_NAME
      CASE_DESCRIPTION
      OPPOSING_PARTY
      CONTACT
    }
    enum BasicDataCompleteness {
      COMPLETE
      INCOMPLETE
    }
    enum ClassificationConfidence {
      HIGH
      LOW
    }
    enum DocumentationStatus {
      COMPLETE
      PARTIAL
      INCOMPLETE
    }
  }

  package "Procedure & audit" as enums_misc {
    enum ProcedureStep {
      ESTABLISH_CLAIM_BASIS
      SEND_PRELAWSUIT_NOTICE
      FILE_LAWSUIT
      ESTABLISH_DAMAGE_BASIS
      FILE_DAMAGES_CLAIM
      ESTABLISH_OWNERSHIP
      FILE_PROPERTY_CLAIM
    }
    enum OfficeLoadWarningType {
      MANY_CASES_WAITING_FOR_DOCUMENTS
      MANY_CASES_READY_FOR_REVIEW
    }
    enum AuditRecordType {
      RULE_FIRED
      STATUS_CHANGED
      TASK_CREATED
      CASE_UPDATED
      CASE_DELETED
    }
    enum CaseTimelineEventKind {
      TASK_CREATED
      DOCUMENT_ADDED
      CASE_UPDATED
    }
    enum CepAlertType {
      DOCUMENT_NOT_ADDED
      CASE_INACTIVE
      READY_NOT_REVIEWED
    }
  }

  enums_case -[hidden]right- enums_doc
  enums_doc -[hidden]right- enums_task
  enums_task -[hidden]right- enums_val
  enums_val -[hidden]right- enums_misc
}

' ═══════════════════════════════════════════════════════════════════
' Vertical flow
' ═══════════════════════════════════════════════════════════════════

pkg_core -[hidden]down- pkg_derived
pkg_derived -[hidden]down- pkg_cep
pkg_cep -[hidden]down- pkg_procedure
pkg_procedure -[hidden]down- pkg_enums

' ═══════════════════════════════════════════════════════════════════
' Semantic links (minimal)
' ═══════════════════════════════════════════════════════════════════

LegalCase -down-> pkg_derived : Drools derives\n(via caseId)
CaseClassification -[hidden]down- ProcedureGoal
CaseClassification ..> ProcedureGoal : caseType
LegalCase ..> OfficeCaseStatus : caseId

@enduml
